- (Mar 15 2009) Daniel Stenberg:

  * libssh2_channel_read_ex() was simplified and enhanced. It now adjusts the
    window less frequent and uses much larger window that now allows MUCH
    faster transfers.

  * SCP send/recv now allow file names with whitespaces etc, thanks to a patch
    by Heiner Steven

- (Mar 13 2009) Daniel Stenberg: Cleanups, that do seem to have boosted SFTP
  download performance up to 300% in some tests:

  * cut off "_ex" from several internal function names

  * corrected some log outputs

  * simplified libssh2_channel_read_ex() and made it much faster in the process

  * cut out {{{ and }}} comments that were incorrect anyway

  * fixed sftp_packet_ask() to return the correct packet by using memcmp() and
    not strncmp()

  * fixed mkdir()'s wait for packet to use the correct request_id - it
    semi-worked previously because strncmp() in sftp_packet_ask() made it
    match far too easily.

  * took away the polling functionality from sftp_packet_ask() since it wasn't
    used

- (Mar 7 2009) Olivier Hervieu pointed out a flaw in the
  libssh2_channel_x11_req_ex() function that made it produce a crappy random
  chunk of data. Peter Stuge improved the fix to not do out-of-boundary
  writes. I (Daniel Stenberg) replaced the snprintf() with a plain sprintf()
  since the size argument wasn't adding anything anyway.

- (Feb 23 2009) Added libssh2_version()

- (Feb 20 2009) libssh2_channel_direct_tcpip_ex() bug #1902169 fixed, which
  caused it to fail when called a second time.

- (Feb 12 2009) Romain Bondue extended Markus Moeller fix from Feb 8, based on
  a previous (uncommitted) patch by Erik Brossler. It improves
  libssh2_channel_write_ex in blocking situations when the socket is set non-
  blocking.

- (Feb 8 2009) Markus Moeller fixed a flaw in libssh2_channel_write_ex() that
  would occur on EAGAIN situations.

Version 1.0 (December 26 2008)
------------------------------
