@@ -1,0 +1,14 @@
+.\" $Id: libssh2_userauth_hostbased_fromfile_ex.3,v 1.1 2009/03/16 15:00:45 bagder Exp $
+.\"
+.TH libssh2_userauth_hostbased_fromfile_ex 3 "1 Jun 2007" "libssh2 0.15" "libssh2 manual"
+.SH NAME
+libssh2_userauth_hostbased_fromfile_ex - TODO
+.SH SYNOPSIS
+
+.SH DESCRIPTION
+
+.SH RETURN VALUE
+
+.SH ERRORS
+
+.SH SEE ALSO
